Insertion of the FRESCO project section on the MERVEX website. Change made by David J. Nachón in February 2024.

--- a/index.html
+++ b/index.html
@@ -57,13 +57,17 @@
         <ul>
 <li class="drop-down"><a href="#IMPRESS">What is MERVEX?</a>
             <ul>
-			<li><a href="./proof/GRC.html">GRC Mervex</a></li>
+			<li><a href="./proof/GRC2018.html">GRC Mervex 2018</a></li>
+			
+			<li><a href="./proof/GRC2022.html">GRC Mervex 2022</a></li>
 			
 		    <li><a href="https://math4fish.ieo.csic.es/">Math4Fish</a></li>
 		 
 		    <li><a href="https://fishclim.csic.es/">FishClim</a></li>
 			
 		    <li><a href="https://mervex-group.github.io/EVALICES/">EVALICES</a></li>
+		 
+		   <li><a href="./proof/FRESCO.html">FRESCO</a></li>
             </ul>
 </li>
 		 <li class="drop-down"><a href="#portfolio">Dissemination</a>
@@ -78,12 +82,10 @@
           <li><a href="#News">News</a></li>
 		  <li><a href="#work">Coming symposium</a></li>
           <li><a href="#footer">Contact Us</a>
-		  <a href="https://twitter.com/MERVEXgroup_IEO" class="twitter"><i class="fa fa-twitter"></i></a>
+		  <a href="https://twitter.com/MERVEXgroup_IEO"> <img src="img/socialmediax.png" alt="" height="20"></a>
 		  <a href="https://github.com/MERVEX-group"> <img src="img/git.png" alt="" height="20"></a>
 		  </li>
         </ul>
-
-
 
       </nav><!-- .main-nav -->
       
@@ -222,11 +224,15 @@ Consellería de Economía, Emprego y Industria</a>", "<a href="https://ceei.xunt
 			Take a look at it!.
 			   <div class="row">
 			     <body>
-                  <center> <iframe width="1115" height="660" src="https://www.youtube.com/embed/icpsSn9ooDw?si=FgWNjllNvg9A7cju" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> </center>
+                  <center> <iframe width="1150" height="660" src="https://www.youtube.com/embed/icpsSn9ooDw?si=FgWNjllNvg9A7cju" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> </center>
                  </body>
                </div>			   
 			 </p>      
 
+
+          <header class="section-header"> 
+            <center> <h3>Current projects</h3> </center>
+		  </header>
         <div class="row flex-items-xs-middle flex-items-xs-center">
       <div class="row">
           <!-- Basic Plan  -->
@@ -288,6 +294,24 @@ Consellería de Economía, Emprego y Industria</a>", "<a href="https://ceei.xunt
           </div>
 </div>
 
+		            <!-- Basic Plan  -->
+          <div class="col-xs-12 col-lg-4">
+            <div class="card">
+              <div class="card-header">
+                <h3><span class="currency"></span><span class="period"></span></h3>
+              </div>
+              <div class="card-block">
+                <h5 class="card-title"> 
+                   <p align="center"> FRESCO</p>               
+			   </h5>
+			   <img src="img/FRESCO.png" alt="" style="max-width:100%;width:auto;height:auto;">
+                <ul class="list-group">
+                  <li class="list-group-item"></li>
+                </ul>
+               <p align="center"> <a href="./proof/FRESCO.html" class="btn">See details</a></p>
+              </div>
+            </div>
+          </div>
 
 <!-- Basic Plan  -->
           <div class="col-xs-12 col-lg-4">
@@ -297,8 +321,7 @@ Consellería de Economía, Emprego y Industria</a>", "<a href="https://ceei.xunt
               </div>
               <div class="card-block">
                 <h4 class="card-title"> 
-                   <p align="center"> EVALICES
-</p>               
+                   <p align="center"> EVALICES</p>               
 			   </h4>
 			   <img src="img/IE.png" alt="" style="max-width:100%;width:auto;height:auto;">
                 <ul class="list-group">
@@ -307,10 +330,11 @@ Consellería de Economía, Emprego y Industria</a>", "<a href="https://ceei.xunt
                   <li class="list-group-item"></li>
                   <li class="list-group-item"></li>
                 </ul>
-               <p align="center"> <a href="https://mervex-group.github.io/EVALICES/" class="btn">See list</a></p>
+               <p align="center"> <a href="https://mervex-group.github.io/EVALICES/" class="btn">See details</a></p>
               </div>
             </div>
-          </div>
+          </div>	  
+  	  
 	</section>
     </section><!-- #pricing -->
 
@@ -360,7 +384,7 @@ Consellería de Economía, Emprego y Industria</a>", "<a href="https://ceei.xunt
                   <li class="list-group-item"></li>
                   <li class="list-group-item"></li>
                 </ul>
-               <p align="center"> <a href="https://impressproject.github.io/PROJECTIMPRESS/" class="btn">See list</a></p>
+               <p align="center"> <a href="https://impressproject.github.io/PROJECTIMPRESS/" class="btn">See details</a></p>
               </div>
             </div>
           </div>
@@ -383,7 +407,7 @@ Consellería de Economía, Emprego y Industria</a>", "<a href="https://ceei.xunt
                   <li class="list-group-item"></li>
                   <li class="list-group-item"></li>
                 </ul>
-               <p align="center"> <a href="./proof/GRC2018.html" class="btn">See list</a></p>
+               <p align="center"> <a href="./proof/GRC2018.html" class="btn">See details</a></p>
               </div>
             </div>
           </div>
@@ -1274,7 +1298,7 @@ provide updates on methods fo​r data and resource-limited fisheries.​​​
 
     <section id="work">
 			  <div class="section-header">
-          <h3>Cooming Symposium</h3>
+          <h3>Last Symposium</h3>
              </div>
 	<section id="pricing" class="wow fadeInUp section-bg">
 <img src="img/clients/both2.png" alt="" style="max-width:100%;width:auto;height:auto;">
@@ -1282,8 +1306,8 @@ provide updates on methods fo​r data and resource-limited fisheries.​​​
 
         <header class="section-header">
           <h3> SIMERPE 2: Second Iberian Symposium on Modeling and Assessment of Fishery Resources </h3>
-		  <h3> The <b>SYMPOSIUM</b> will take place on October 24-27, 2023 on IEO (Cádiz, Spain).
-		  <p align="center"> FUNDED by Math4Fish (go to the <a href="https://math4fish.ieo.csic.es/welcome/">website.</a>)</p>
+		  <h3> The <b>SYMPOSIUM</b> took place on October 24-27, 2023 on IEO (Cádiz, Spain).
+		  <p align="center"> FUNDED by Math4Fish (go to the <a href="https://math4fish.ieo.csic.es/welcome/">website for further details.</a>)</p>
 		  </header>
       </div>
 	</section>
