Workflow of the MIZER model (elaborated by Gustav Delius).

--- a/proof/proof/FRESCO3.html
+++ b/proof/proof/FRESCO3.html
@@ -118,7 +118,7 @@ Ecosystem models (Mizer) require inputs from single stock models such as life hi
 </p>
 
 <p align="center">
-<b>Figure 3:</b> Workflow of the MIZER model.
+<b>Figure 3:</b> Workflow of the MIZER model (elaborated by Gustav Delius).
 </p>
 
 <p align="justify">
