Updates in FRESCO by DJNG_08_02/2024

--- a/proof/FRESCO.html
+++ b/proof/FRESCO.html
@@ -204,7 +204,7 @@ In the following items, relevant information included in the application form of
 
                   <div class="footer-links">
     <h4>Contact Us</h4>
-					The emails are available in <a href="#RESEARCH TEAM AND SCHEDULE">RESEARCH TEAM AND SCHEDULE</a>.
+					The emails are available in <a href="#RESEARCH TEAM AND SCHEDULE">PROJECT TEAM COMPOSITION AND SCHEDULE</a>.
 					
                     <p>
                       <strong>PIs of the project:</strong> 
