--- a/proof/proof/FRESCO4.html
+++ b/proof/proof/FRESCO4.html
@@ -91,6 +91,7 @@ and basic information about the role of each member separated by sections: <a hr
 					<a href="https://twitter.com/grazia_pennino"><img src="img/socialmediax.png" alt="" height="20" width="20"></a>
 					<a href="https://www.researchgate.net/profile/Maria_Pennino"><img src="img/rg.png" alt="" height="20" width="20"></a>
 					<a href="https://graziapennino.wixsite.com/website"><img src="img/web.jpg" alt="" height="20" width="20"></a>
+					<a href="https://orcid.org/0000-0002-7577-2617"><img src="img/orcid.png" alt="" height="20" width="20"></a>
                   </div>
                 </div>
               </div>
@@ -107,6 +108,7 @@ and basic information about the role of each member separated by sections: <a hr
                   <div class="social">
                     <a href="https://twitter.com/SantiagoCervino"><img src="img/socialmediax.png" alt="" height="20" width="20"></a>
                     <a href="https://www.researchgate.net/profile/Santiago_Cervino"><img src="img/rg.png" alt="" height="20" width="20"></a>
+					<a href="https://orcid.org/0000-0003-4146-0890"><img src="img/orcid.png" alt="" height="20" width="20"></a>
                   </div>
                 </div>
               </div>
@@ -118,11 +120,12 @@ and basic information about the role of each member separated by sections: <a hr
               <img src="img/Paz.JPG" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>M. P. Sampedro Pastor (PS)</h4>
+                  <h4>P. Sampedro (PS)</h4>
                   <span>paz.sampedro@ieo.csic.es</span>
                   <div class="social">
                     <a href="https://twitter.com/pazsampas"><img src="img/socialmediax.png" alt="" height="20" width="20"></a>
                     <a href="https://www.researchgate.net/profile/Paz_Sampedro"><img src="img/rg.png" alt="" height="20" width="20"></a>
+					<a href="https://orcid.org/0000-0002-1974-7302"><img src="img/orcid.png" alt="" height="20" width="20"></a>
                   </div>
                 </div>
               </div>
@@ -154,11 +157,12 @@ and basic information about the role of each member separated by sections: <a hr
               <img src="img/abad.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>E. Abad Casas (EA)</h4>
+                  <h4>E. Abad (EA)</h4>
                   <span>esther.abad@ieo.csic.es</span>
                   <div class="social">
 					<a href="https://twitter.com/eabad_ieo?lang=es"><img src="img/socialmediax.png" alt="" height="20" width="20"></a>
                     <a href="https://www.researchgate.net/profile/Esther_Abad"><img src="img/rg.png" alt="" height="20" width="20"></a>
+					<a href="https://orcid.org/0000-0003-1371-3715"><img src="img/orcid.png" alt="" height="20" width="20"></a>
                   </div>
                 </div>
               </div>
@@ -188,10 +192,11 @@ and basic information about the role of each member separated by sections: <a hr
               <img src="img/herraiz.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>I. González Herraiz (IG)</h4>
+                  <h4>I. González (IG)</h4>
                   <span>Isabel.herraiz@ieo.csic.es</span>
                   <div class="social">
                    <a href=""><img src="img/rg.png" alt="" height="20" width="20"></a>
+				   <a href="https://orcid.org/0000-0001-7206-8686"><img src="img/orcid.png" alt="" height="20" width="20"></a>
                   </div>
                 </div>
               </div>
@@ -208,30 +213,42 @@ and basic information about the role of each member separated by sections: <a hr
 <li> <p align="justify"> <b>(1) Dra. M.G. Pennino (MGP):</b> the PI of the project, expert of ecological modelling with emphasis on spatial and stock assessment models. 
 Stock coordinator of the common sole in the ICES areas 8c9a and member of the ICES 
 Working Group for the Bay of Biscay and the Iberian Waters Ecoregion (WGBIE); 
-she is the co-PI of the IMPRESS Spanish National Project.
+she is the co-PI of the IMPRESS Spanish National Project. 
 </p>	</li>
 
 <li> <p align="justify"> <b>(2) Dr. S. Cerviño (SC):</b> the PI of the project, expert on stock assessment methods from IEO-Vigo, 
 chair of WGBIE, working group on charge of the assessment of the single stocks involved in this project;
-he is the co-PI of the IMPRESS Spanish National Project.
+he is the co-PI of the IMPRESS Spanish National Project. <b>Affiliation:</b> Instituto Español de Oceanografía (IEO-CSIC), 
+Centro Oceanográfico de Vigo, Subida a Radio Faro, 50-52. 36390 Vigo, Pontevedra, Spain. 
 </p>	</li>
 
 <li> <p align="justify"> <b>(3) Dra. P. Sampedro (PS):</b> is an expert on stock assessment models from IEO-Coruña, 
-stock coordinator of anglerfishes in the ICES area 8c9a, member of the ICES WGBIE and STEFC.
+stock coordinator of anglerfishes in the ICES area 8c9a, member of the ICES WGBIE and STEFC. 
+<b>Affiliation:</b> Instituto Español de Oceanografía (IEO, CSIC), Centro Oceanográfico de A Coruña, 
+Paseo Marítimo Alcalde Francisco Vázquez 10, 15001 A Coruña, Spain.
 </p>	</li>
 
 <li> <p align="justify"> <b> (4) Dra. I. Preciado (IP):</b> is an expert on marine trophic web indicators and ecological models, leader of the Descriptor 4 of 
 Trophic Networks in the scope of the Marine Strategies Framework Directive (MSFD).
+<b>Affiliation:</b> Instituto Español de Oceanografía (IEO, CSIC), Centro Oceanográfico de Santander, 
+Promontorio San Martín, s/n Aptdo. 240 39080 Santander, ES.
 </p>	</li>
 
 <li> <p align="justify"> <b> (5) E. Abad (EA):</b> is an expert on stock assessment models from IEO-Vigo, stock coordinator of megrims stocks in the 
-ICES area 8c9a, member of the ICES WGBIE.
+ICES area 8c9a, member of the ICES WGBIE. <b>Affiliation:</b> Instituto Español de Oceanografía (IEO-CSIC), 
+Centro Oceanográfico de Vigo, Subida a Radio Faro, 50-52. 36390 Vigo, Pontevedra, Spain.
 </p>	</li>
 
-<li> <p align="justify"> <b>(6) Dr. F. Velasco (FV):</b> is an expert in fishery management, chief of the fishery ICES department in the IEO and the Spanish representative in the ICES ACOM committee.
+<li> <p align="justify"> <b>(6) Dr. F. Velasco (FV):</b> is an expert in fishery management, 
+chief of the fishery ICES department in the IEO and the Spanish representative in the ICES ACOM committee.
+<b>Affiliation:</b> Instituto Español de Oceanografía (IEO, CSIC), Centro Oceanográfico de Santander, 
+Promontorio San Martín, s/n Aptdo. 240 39080 Santander, ES.
 </p>	</li>
 
-<li> <p align="justify"> <b>(7) Dra. I. Gonzalez Herraiz (IG):</b> is an expert on stock assessment models from IEO-Coruña, stock coordinator of Nephrops FUs in the ICES area 8c, member of the ICES WGBIE.
+<li> <p align="justify"> <b>(7) Dra. I. Gonzalez Herraiz (IG):</b> is an expert on stock assessment models from IEO-Coruña, 
+stock coordinator of Nephrops FUs in the ICES area 8c, member of the ICES WGBIE.
+<b>Affiliation:</b> Instituto Español de Oceanografía (IEO, CSIC), Centro Oceanográfico de A Coruña, 
+Paseo Marítimo Alcalde Francisco Vázquez 10, 15001 A Coruña, Spain.
 </p>	</li>
 </ul>
 		  		    
@@ -253,11 +270,12 @@ ICES area 8c9a, member of the ICES WGBIE.
               <img src="img/A. Paz (AP).jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-               <h4>Anxo Paz (AP)</h4>
+               <h4>A. Paz (AP)</h4>
                   <span>anxo.paz@ieo.csic.es</span>
 				  <div class="social">
 				  <a href="https://twitter.com/a_paz_"><img src="img/socialmediax.png" alt="" height="20" width="20"></a>
 				  <a href="https://www.linkedin.com/in/anxo-paz-445b22216/"><i class="fa fa-linkedin"></i></a>
+				  <a href="https://orcid.org/0000-0002-1223-6200"><img src="img/orcid.png" alt="" height="20" width="20"></a>
                 </div>
               </div>
             </div>
@@ -269,12 +287,13 @@ ICES area 8c9a, member of the ICES WGBIE.
               <img src="img/M. Cousido-Rocha (MC).jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>M. Cousido Rocha (MC)</h4>
+                  <h4>M. Cousido (MC)</h4>
                   <span>marta.cousido@ieo.csic.es</span>
                   <div class="social">
                     <a href="https://twitter.com/CousidoMarta"><img src="img/socialmediax.png" alt="" height="20" width="20"></a>
                     <a href="https://es.linkedin.com/in/marta-cousido-rocha-209382105"><i class="fa fa-linkedin"></i></a>
 					<a href="https://www.researchgate.net/profile/Marta_Cousido-Rocha"><img src="img/rg.png" alt="" height="20" width="20"></a>
+					<a href="https://orcid.org/0000-0002-4587-8808"><img src="img/orcid.png" alt="" height="20" width="20"></a>
                   </div>
                 </div>
               </div>
@@ -286,10 +305,11 @@ ICES area 8c9a, member of the ICES WGBIE.
               <img src="img/Fran.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-               <h4>F. Izquierdo Tarín (FI) </h4>
+               <h4>F. Izquierdo (FI) </h4>
                   <span>francisco.izquierdo@ieo.csic.es</span>
 				  <div class="social">
 				  <a href="https://twitter.com/izquierdo_fr"><img src="img/socialmediax.png" alt="" height="20" width="20"></a>
+				  <a href="https://orcid.org/0000-0002-0781-1354"><img src="img/orcid.png" alt="" height="20" width="20"></a>
                 </div>
               </div>
             </div>
@@ -308,6 +328,7 @@ ICES area 8c9a, member of the ICES WGBIE.
 				   <a href="https://scholar.google.es/citations?user=bsBmwGEAAAAJ&hl=es"><img src="img/scolar.png" alt="" width="20"></a>
 				   <a href="https://www.researchgate.net/profile/David-Jose-Garcia"><img src="img/rg.png" alt="" height="20" width="20"></a>
 				   <a href="https://www.linkedin.com/in/david-jos%C3%A9-nach%C3%B3n-garc%C3%ADa-881454237/"><i class="fa fa-linkedin"></i></a>
+				   <a href="https://orcid.org/0000-0002-1090-9993"><img src="img/orcid.png" alt="" height="20" width="20"></a>
                   </div>
                 </div>
               </div>
@@ -372,7 +393,7 @@ ICES area 8c9a, member of the ICES WGBIE.
               <img src="img/image.png" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Irene Rabanal (IR)</h4>
+                  <h4>I. Rabanal (IR)</h4>
                   <span>irene.rabanal@ieo.csic.es</span>
                   <div class="social">
 				   	<a href=""><img src="img/scolar.png" alt="" width="20"></a>
@@ -392,24 +413,39 @@ ICES area 8c9a, member of the ICES WGBIE.
 <br>
 
 <ul>
-<li> <p align="justify"> <b>(1) A. Paz (AP):</b> is a PhD student supervised by SC, which is studying how climate change could affect stocks distribution and abundance in the Northeast Atlantic waters.
+<li> <p align="justify"> <b>(1) A. Paz (AP):</b> is a PhD student supervised by SC, 
+which is studying how climate change could affect stocks distribution and abundance in the Northeast Atlantic waters.
+<b>Affiliation:</b> Instituto Español de Oceanografía (IEO-CSIC), 
+Centro Oceanográfico de Vigo, Subida a Radio Faro, 50-52. 36390 Vigo, Pontevedra, Spain.
 </p>	</li>
 
-<li> <p align="justify"> <b> (2) Dra. M. Cousido-Rocha (MC):</b> is a mathematician, expert in several modeling approaches and in particular in stock assessment models.
+<li> <p align="justify"> <b> (2) Dra. M. Cousido-Rocha (MC):</b> is a mathematician, 
+expert in several modeling approaches and in particular in stock assessment models.
+<b>Affiliation:</b> Instituto Español de Oceanografía (IEO-CSIC), 
+Centro Oceanográfico de Vigo, Subida a Radio Faro, 50-52. 36390 Vigo, Pontevedra, Spain.
 </p>	</li>
 
-<li> <p align="justify"> <b> (3) Francisco Izquierdo (FI):</b> is a FPI student supervised by both IPs of the <b>FRESCO</b> project, which is studying how spatial heterogeneity could affect stock 
+<li> <p align="justify"> <b> (3) Francisco Izquierdo (FI):</b> is a FPI 
+student supervised by both IPs of the <b>FRESCO</b> project, which is studying how spatial heterogeneity could affect stock 
 assessment results.
+<b>Affiliation:</b> Instituto Español de Oceanografía (IEO-CSIC), 
+Centro Oceanográfico de Vigo, Subida a Radio Faro, 50-52. 36390 Vigo, Pontevedra, Spain.
 </p>	</li>
 
 <li> <p align="justify"> <b> (4) Dr. David Nachón (DN):</b> is an expert in fish biology and ecology and trophic interactions.
+<b>Affiliation:</b> Instituto Español de Oceanografía (IEO-CSIC), 
+Centro Oceanográfico de Vigo, Subida a Radio Faro, 50-52. 36390 Vigo, Pontevedra, Spain.
 </p>	</li>
 
 <li> <p align="justify"> <b> (5) Dr. G. Delius (GD):</b> is an applied mathematician at the University of York and the Mizer developer.
+<b>Affiliation:</b> University of York. Heslington, York YO10 5DD, Reino Unido. 
 </p>	</li>
 
-<li> <p align="justify"> <b> (6) Dra. M. Torres (MT):</b> is an expert in ecosystem models, ecological indicators and she works in Descriptor 4 of 
+<li> <p align="justify"> <b> (6) Dra. M. Torres (MT):</b> is an expert in ecosystem models, 
+ecological indicators and she works in Descriptor 4 of 
 Trophic Networks in the scope of the MSFD.
+<b>Affiliation:</b> Instituto Español de Oceanografía (IEO, CSIC), Centro Oceanográfico de Cádiz, 
+Puerto pesquero, Muelle de Levante s/n, Apdo. 2609, 11006 Cádiz, Spain.
 </p>	</li>
 </ul>
 	
