Update affiliation M. G. Pennino.

--- a/proof/proof/FRESCO4.html
+++ b/proof/proof/FRESCO4.html
@@ -214,6 +214,8 @@ and basic information about the role of each member separated by sections: <a hr
 Stock coordinator of the common sole in the ICES areas 8c9a and member of the ICES 
 Working Group for the Bay of Biscay and the Iberian Waters Ecoregion (WGBIE); 
 she is the co-PI of the IMPRESS Spanish National Project. 
+<b>Affiliation:</b> Instituto Español de Oceanografía (IEO-CSIC), Centro Oceanográfico de Madrid, 
+C. del Corazón de María, 8, 28002 Madrid, Spain.
 </p>	</li>
 
 <li> <p align="justify"> <b>(2) Dr. S. Cerviño (SC):</b> the PI of the project, expert on stock assessment methods from IEO-Vigo, 
