--- a/proof/FRESCO.html
+++ b/proof/FRESCO.html
@@ -160,6 +160,66 @@ In the following items, relevant information included in the application form of
         </header>
 		
         <ul id="News-list" class="wow fadeInUp">
+				<li>
+            <a data-toggle="collapse" class="collapsed" href="#NewsFRESCO7">FRESCO in Frontiers for Young Minds: Using Math to Protect Fish in the Ocean (12/11/2025) <i class="ion-android-remove"></i></a>
+            <div id="NewsFRESCO7" class="collapse" data-parent="#News-list"> <p align="justify"> 
+             		FRESCO members published an article in <em>Frontiers for Young Minds</em> titled 
+            “Using Math to Protect Fish in the Ocean". The article explains how mathematical modeling helps understand and manage fish populations, using clear language and illustrations suitable for children and teenagers. 
+            By making science accessible to young readers, it encourages curiosity about marine ecosystems and the tools scientists use to protect them.        </p>		
+					<div align="center"> <img src="img/newFRESCO7.JPG" alt="" style="max-width:100%;width:auto;height:auto;"> </div>
+					 <a href="https://kids.frontiersin.org/articles/10.3389/frym.2025.1589436/full"> Discover the article!!</a>
+            </div>
+         </li>
+		
+		<li>
+            <a data-toggle="collapse" class="collapsed" href="#NewsFRESCO6">Presenting our advances at the  Iberian Symposium on Modeling and Assessment of Fishery Resources​ (SIMERPE III)  (4/11/2025-7/11/2025) <i class="ion-android-remove"></i></a>
+            <div id="NewsFRESCO6" class="collapse" data-parent="#News-list"> <p align="justify"> 
+             		FRESCO members presented project advances through an oral communication entitled "From Ecosystem Models to Stock Assessment: The Role of Cannibalism in Atlantic Iberian Hake".		
+					<div align="center"> <img src="img/newFRESCO6.JPG" alt="" style="max-width:100%;width:auto;height:auto;"> </div>
+					 <a href="https://congressos.mundiconvenius.pt/Ficheiros/SIMERPE/SIMERP3_BookAbstracts.pdf"> More details!</a>
+            </div>
+         </li>
+		
+													 		<li>
+            <a data-toggle="collapse" class="collapsed" href="#NewsFRESCO5">FRESCO participated at the ICES Annual Science Conference (15/09/2025-18/09/2025) <i class="ion-android-remove"></i></a>
+            <div id="NewsFRESCO5" class="collapse" data-parent="#News-list"> <p align="justify"> 
+             		FRESCO members presented a poster at the ICES Annual Science Conference entitled 
+            “Dealing with Cannibalism in Fisheries Management: A Case Study of European Hake in the Atlantic Iberian Waters.” 		
+					<div align="center"> <img src="img/newFRESCO5.jpeg" alt="" style="max-width:100%;width:auto;height:auto;"> </div>
+					 <a href="./proof/FRESCO_poster_asc.pdf"> Discover the poster!</a>
+            </div>
+         </li>
+											 		<li>
+            <a data-toggle="collapse" class="collapsed" href="#NewsFRESCO4">Showcasing FRESCO Research at the SEAWISE Symposium (30/06/2025-03/07/2025) <i class="ion-android-remove"></i></a>
+            <div id="NewsFRESCO4" class="collapse" data-parent="#News-list"> <p align="justify"> 
+             		FRESCO members presented a poster entitled “Assessment Complexity vs Applicability: The Case Study of the Cannibal European Hake in the Atlantic Iberian Waters.”		
+					<div align="center"> <img src="img/newFRESCO4.jpeg" alt="" style="max-width:100%;width:auto;height:auto;"> </div>
+					 <a href="./proof/FRESCO_poster_seawise.pdf"> Discover the poster!</a>
+            </div>
+         </li>
+		 
+		 											 		<li>
+            <a data-toggle="collapse" class="collapsed" href="#NewsFRESCO3">New Scientific Publication in Ecological Modelling Journal  (26/06/2025) <i class="ion-android-remove"></i></a>
+            <div id="NewsFRESCO3" class="collapse" data-parent="#News-list"> <p align="justify"> 
+             		FRESCO members have published a new peer-reviewed article in <em>Ecological Modelling</em> entitled 
+            “A decade of mizer: A systematic review of advancements and applications of size spectrum modeling in aquatic ecosystems.” 
+         
+		
+					<div align="center"> <img src="img/newFRESCO3.jpeg" alt="" style="max-width:100%;width:auto;height:auto;"> </div>
+					 <a href="https://www.sciencedirect.com/science/article/pii/S0304380025002273?via%3Dihub">Discover the article!</a>
+            </div>
+         </li>
+		 
+		 
+		
+									 		<li>
+            <a data-toggle="collapse" class="collapsed" href="#NewsFRESCO2">Showcasing FRESCO Research at the IMBeR (Integrated Marine Biosphere Research) Congress (13-16/05/2025) <i class="ion-android-remove"></i></a>
+            <div id="NewsFRESCO2" class="collapse" data-parent="#News-list"> <p align="justify"> 
+             		FRESCO members presented a poster entitled “Understanding Multi-Stressors in Marine Ecosystems Through a Multispecies Size-Spectrum Model in the Northeast Atlantic.”		
+					<div align="center"> <img src="img/newFRESCO2.jpeg" alt="" style="max-width:100%;width:auto;height:auto;"> </div>
+					 <a href="./proof/FRESCO_poster_imber.pdf"> Discover the poster!</a>
+            </div>
+         </li>
 
 							 		<li>
             <a data-toggle="collapse" class="collapsed" href="#NewsFRESCO1"> Kick-off meeting ! (17/01/2024) <i class="ion-android-remove"></i></a>
